--- a/client/src/app/pages/invoices/invoice-confirmation/invoice-confirmation.component.html
+++ b/client/src/app/pages/invoices/invoice-confirmation/invoice-confirmation.component.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
             <div class="table-responsive-sm">
-                <table class="table table-striped">
+                <table class="table text-white">
                     <thead>
                         <tr>
                             <th class="center">#</th>
@@ -61,7 +61,7 @@
                 <div class="col-lg-4 col-sm-5">
                 </div>
                 <div class="col-lg-4 col-sm-5 ml-auto">
-                    <table class="table table-clear">
+                    <table class="table table-clear text-white">
                         <tbody>
                             <tr>
                                 <td class="left">
@@ -71,27 +71,29 @@
                             </tr>
                             <tr>
                                 <td class="left">
+                                    <strong>Discount ({{modalData?.discount}}
+                                        {{modalData?.discountType === 'amount' ? 'Amount' : '%'}})</strong>
+                                </td>
+                                <td class="right">{{modalData?.totalPriceAfterDiscount.toFixed(2)}}</td>
+                            </tr>
+                            <tr *ngIf="modalData?.with_gst">
+                                <td class="left">
                                     <strong>CGST ({{modalData?.cgst === null ? 0 : modalData?.cgst}}%)</strong>
                                     <br>
                                     <strong>SGST ({{modalData?.sgst === null ? 0 : modalData?.sgst}}%)</strong>
                                     <br>
                                     <strong>IGST ({{modalData?.igst === null ? 0 : modalData?.igst}}%)</strong>
                                 </td>
-                                <td class="right">{{modalData?.totalPriceAfterGST}}</td>
+                                <td class="right">{{modalData?.totalPriceAfterGST.toFixed(2)}}</td>
                             </tr>
-                            <tr>
-                                <td class="left">
-                                    <strong>Discount ({{modalData?.discount}}
-                                        {{modalData?.discountType === 'amount' ? 'Amount' : '%'}})</strong>
-                                </td>
-                                <td class="right">{{modalData?.totalPriceAfterDiscount}}</td>
-                            </tr>
+
                             <tr>
                                 <td class="left">
                                     <strong>Total</strong>
                                 </td>
                                 <td class="right">
-                                    <strong>{{modalData?.totalPriceAfterDiscount}}</strong>
+                                    <!-- {{modalData?.with_gst}} -->
+                                    <strong>{{modalData?.with_gst ? modalData?.totalPriceAfterGST.toFixed(2) : modalData?.totalPriceAfterDiscount.toFixed(2)}}</strong>
                                 </td>
                             </tr>
                         </tbody>
