--- a/client/src/app/pages/invoices/invoice-list/invoice-list.component.html
+++ b/client/src/app/pages/invoices/invoice-list/invoice-list.component.html
@@ -9,22 +9,19 @@
         <th>Customer Info</th>
         <th>Total Price</th>
         <th>Price After Discount</th>
-        <th>Price After GST</th>
+        <th *ngIf="withGst">Price After GST</th>
         <th>Action</th>
       </thead>
       <tbody>
-        <tr *ngFor="let invoice of obs | async | search:'id':invoiceSearch:invoiceList">
-          <td class="desc">{{invoice.id}}</td>
-          <td class="desc">{{invoice?.sale_info.customer}}</td>
-          <td class="desc">{{invoice.totalPrice}}</td>
-          <td class="desc">{{invoice.totalPriceAfterDiscount}}</td>
-          <td class="desc">{{invoice.totalPriceAfterGST}}</td>
-
+        <tr *ngFor="let invoice of obs | async | search:'id':invoiceSearch:invoiceList; let i =index">
+          <td class="desc">{{i+1}}</td>
+          <td class="desc">{{invoice?.sale_info.customer?.f_name}} {{invoice?.sale_info.customer?.l_name}}</td>
+          <td class="desc">{{invoice?.sale_info?.totalPrice}}</td>
+          <td class="desc">{{invoice?.sale_info?.totalPriceAfterDiscount}}</td>
+          <td *ngIf="withGst" class="desc">{{invoice?.sale_info?.totalPriceAfterGST}}</td>
           <td>
-            <a class="btn btn-secondary text-white mr-1" (click)="onEdit(invoice)"><i class="far fa-edit"></i>
-            </a>
-            <a class="btn btn-danger text-white" (click)="onDelete(invoice)">
-              <i class="fas fa-trash-alt"></i>
+            <a class="btn btn-secondary text-white mr-1" (click)="viewInvoice(invoice)">
+              <i class="fa fa-eye"></i>
             </a>
           </td>
         </tr>
