Added new Invoice

--- a/client/projects/invoice-modal/src/lib/invoice-modal.component.scss
+++ b/client/projects/invoice-modal/src/lib/invoice-modal.component.scss
@@ -163,5 +163,5 @@
 	opacity: 0.6;
 }
 .modal-container.p-history{
-    background: linear-gradient(0deg, #ec250d 0%, #fd5d93 100%) !important;
+    // background: linear-gradient(0deg, #ec250d 0%, #fd5d93 100%) !important;
 }
