--- a/client/src/app/components/navbar/navbar.component.html
+++ b/client/src/app/components/navbar/navbar.component.html
@@ -24,12 +24,12 @@
             <i class=" tim-icons icon-zoom-split"> </i>
             <span class=" d-lg-none d-md-block"> Search </span>
           </button> -->
-          {{userInfo?.username}}
+          {{userInfo?.name}}
         </li>
         <li class=" nav-item" ngbDropdown>
           <a class=" nav-link" data-toggle="dropdown" href="javascript:void(0)" ngbDropdownToggle>
             <div class=" photo">
-              <img alt="Profile Photo" src="assets/img/anime3.png" />
+              <!-- <img alt="Profile Photo" src="assets/img/anime3.png" /> -->
             </div>
             <b class=" caret d-none d-lg-block d-xl-block"> </b>
             <p class=" d-lg-none" (click)="logout()">Log out</p>
