--- a/client/projects/invoice-modal/src/lib/invoice-modal.component.html
+++ b/client/projects/invoice-modal/src/lib/invoice-modal.component.html
@@ -2,7 +2,7 @@
     [ngClass]="properties.backdropClass"></div>
 <div class="modal-container" [ngStyle]="containerStyles" [ngClass]="properties.modalClass">
     <div class="modal-header">
-        <div class="modal-title" *ngIf="properties.title">{{properties.title}}</div>
+        <!-- <div class="modal-title" *ngIf="properties.title">{{properties.title}}</div> -->
         <div class="modal-close" *ngIf="properties.mode != 'dialog'" (click)="closeModal()"></div>
     </div>
     <div class="modal-wrapper" [ngStyle]="containerWrapperStyles">
