--- a/client/src/app/pages/categories/category-list/category-list.component.html
+++ b/client/src/app/pages/categories/category-list/category-list.component.html
@@ -21,7 +21,10 @@
             <tbody>
                 <tr *ngFor="let category of obs | async | search:'name,description':categorySearch:categoryList">
                     <td class="desc">{{category.id}}</td>
-                    <td class="desc">{{category.name}}</td>
+                    <td class="desc" [helipopper]="moreCatInfo" helipopperVariation="popper">
+                        <span class="text-yellow">{{category.name}}
+                        </span>
+                    </td>
                     <td class="desc">{{category.description}}</td>
                     <td class="desc" [ngClass]="{'text-success': category.is_active,
                                             'text-danger': !category.is_active}">
@@ -34,6 +37,16 @@
                             <i class="fas fa-trash-alt"></i>
                         </a>
                     </td>
+                    <ng-template #moreCatInfo>
+                        <div class="row">
+                            <!-- <div class="col-lg-4 p-1">ID</div> -->
+                            <div class="col-lg-12 p-1">
+                                <strong>
+                                    {{category.id}}
+                                </strong>
+                            </div>
+                        </div>
+                    </ng-template>
                 </tr>
             </tbody>
         </table>
