--- a/client/src/app/pages/invoices/invoice-confirmation/invoice-confirmation.component.html
+++ b/client/src/app/pages/invoices/invoice-confirmation/invoice-confirmation.component.html
@@ -1,15 +1,26 @@
 <div>
     <header>
-        <h1>Invoice</h1>
+        <!-- <h1>Invoice</h1> -->
+        <span>
+            <img alt="" src="./assets/img/Layer.png">
+        </span>
         <address>
             <p>{{ownerInformation?.company_name}}</p>
             <p>{{ownerInformation?.name}}</p>
+            <strong>GSTIN:</strong>
             <p>{{ownerInformation?.gstin}}</p>
+            <strong>Account No:</strong>
+            <p>{{ownerInformation?.account_no}}</p>
+            <strong>IFSC:</strong>
+            <p>{{ownerInformation?.ifsc_code}}</p>
+            <strong>Address:</strong>
             <p>
                 {{ownerInformation?.address}}
             </p>
         </address>
-        <span><img alt="" src="./assets/img/JobitaTechnologies.png"><input type="file" accept="image/*"></span>
+        <!-- <span>
+            <img alt="" src="./assets/img/Layer.png">
+        </span> -->
     </header>
     <article>
         <!-- <h1 class="text-black">Recipient</h1> -->
@@ -20,69 +31,71 @@
         </address>
         <table class="meta">
             <tr>
-                <th><span>Invoice #</span></th>
-                <td><span>{{modalProperties?.title?.id}}</span></td>
+                <th class="yellow-cat"><span>Invoice #</span></th>
+                <td class="black-cat"><span>{{modalProperties?.title?.id}}</span></td>
             </tr>
             <tr>
-                <th><span>Date</span></th>
-                <td><span>{{modalProperties?.title?.date | date: 'short' }}</span></td>
+                <th class="yellow-cat"><span>Date</span></th>
+                <td class="black-cat"><span>{{modalProperties?.title?.date | date: 'short' }}</span></td>
             </tr>
         </table>
         <table class="inventory">
             <thead>
                 <tr>
-                    <th><span>Item</span></th>
-                    <th><span>Warranty</span></th>
-                    <th><span>Color</span></th>
-                    <th><span>Model No</span></th>
-                    <th><span>Unit Cost</span></th>
-                    <th><span>Quantity</span></th>
-                    <th><span>Price</span></th>
+                    <th class="yellow-cat"><span>Item</span></th>
+                    <th class="yellow-cat"><span>Warranty</span></th>
+                    <th class="yellow-cat"><span>Color</span></th>
+                    <th class="black-cat"><span>Model No</span></th>
+                    <th class="black-cat"><span>Unit Cost</span></th>
+                    <th class="black-cat"><span>Quantity</span></th>
+                    <th class="black-cat"><span>Price</span></th>
                 </tr>
             </thead>
             <tbody>
                 <tr *ngFor="let item of modalData?.purchases; let i = index">
-                    <td><span>{{item?.product?.pName}}</span></td>
-                    <td><span>{{item?.product?.p_warranty}}</span></td>
-                    <td><span data-prefix>₹</span><span>{{item?.product?.p_color}}</span></td>
-                    <td><span>{{item?.product?.p_model_no}}</span></td>
-                    <td><span data-prefix>₹</span><span>{{item?.product?.p_sale_price}}</span></td>
-                    <td><span>{{item?.quantity}}</span></td>
-                    <td><span data-prefix>₹</span><span>{{item?.product?.p_sale_price * item?.quantity}}</span></td>
+                    <td class="black-cat"><span>{{item?.product?.pName}}</span></td>
+                    <td class="black-cat"><span>{{item?.product?.p_warranty}}</span></td>
+                    <td class="black-cat"><span>{{item?.product?.p_color}}</span></td>
+                    <td class="black-cat"><span>{{item?.product?.p_model_no}}</span></td>
+                    <td class="yellow-cat"><span data-prefix>₹</span><span>{{item?.product?.p_sale_price}}</span></td>
+                    <td class="yellow-cat"><span>{{item?.quantity}}</span></td>
+                    <td class="yellow-cat"><span
+                            data-prefix>₹</span><span>{{item?.product?.p_sale_price * item?.quantity}}</span></td>
                 </tr>
             </tbody>
         </table>
         <table class="balance">
             <!-- newww -->
             <tr>
-                <th>
+                <th class="yellow-cat">
                     <span>Subtotal</span>
                 </th>
-                <td class="left"><span data-prefix>₹</span> {{modalData?.totalPrice}}</td>
+                <td class="black-cat left"><span data-prefix>₹</span> {{modalData?.totalPrice}}</td>
             </tr>
             <tr>
-                <th>
+                <th class="yellow-cat">
                     <span>Discount ({{modalData?.discount}}
                         {{modalData?.discountType === 'amount' ? 'Amount' : '%'}})</span>
                 </th>
-                <td class="left"><span data-prefix>₹</span> {{modalData?.totalPriceAfterDiscount.toFixed(2)}}</td>
+                <td class="black-cat left"><span data-prefix>₹</span> {{modalData?.totalPriceAfterDiscount.toFixed(2)}}
+                </td>
             </tr>
             <tr *ngIf="modalData?.with_gst">
-                <th>
+                <th class="yellow-cat">
                     <strong>CGST ({{modalData?.cgst === null ? 0 : modalData?.cgst}}%)</strong>
                     <br>
                     <strong>SGST ({{modalData?.sgst === null ? 0 : modalData?.sgst}}%)</strong>
                     <br>
                     <strong>IGST ({{modalData?.igst === null ? 0 : modalData?.igst}}%)</strong>
                 </th>
-                <td class="right"><span data-prefix>₹</span> {{modalData?.totalPriceAfterGST.toFixed(2)}}</td>
+                <td class="black-cat right"><span data-prefix>₹</span> {{modalData?.totalPriceAfterGST.toFixed(2)}}</td>
             </tr>
 
             <tr>
-                <th>
+                <th class="yellow-cat">
                     <span>Total</span>
                 </th>
-                <td class="right">
+                <td class="black-cat right">
                     <!-- {{modalData?.with_gst}} -->
                     <span data-prefix>₹</span>
                     <strong>{{modalData?.with_gst ? modalData?.totalPriceAfterGST.toFixed(2) : modalData?.totalPriceAfterDiscount.toFixed(2)}}</strong>
