--- a/client/src/app/pages/invoices/invoice-confirmation/invoice-confirmation.component.scss
+++ b/client/src/app/pages/invoices/invoice-confirmation/invoice-confirmation.component.scss
@@ -10,8 +10,8 @@ table { font-size: 75%; table-layout: fixed; width: 100%; }
 table { border-collapse: separate; border-spacing: 2px; }
 th, td { border-width: 1px; padding: 0.5em; position: relative; text-align: left; }
 th, td { border-radius: 0.25em; border-style: solid; }
-th { background: linear-gradient(0deg, #ec250d 0%, #fd5d93 100%); color: white; border-color: linear-gradient(0deg, #ec250d 0%, #fd5d93 100%); }
-td { border-color: #DDD; }
+// th { background: linear-gradient(0deg, #ec250d 0%, #fd5d93 100%); color: white; border-color: linear-gradient(0deg, #ec250d 0%, #fd5d93 100%); }
+// td { border-color: #DDD; }
 
 /* page */
 
@@ -27,11 +27,11 @@ header { margin: 0 0 3em; }
 header:after { clear: both; content: ""; display: table; }
 
 header h1 { background: #000; border-radius: 0.25em; color: #FFF; margin: 0 0 1em; padding: 0.5em 0; }
-header address { float: left; font-size: 110%; font-style: normal; line-height: 1.25; margin: 0 1em 1em 0; }
+header address { font-size: 110%; font-style: normal; line-height: 1.25; margin: 0 1em 1em 0; }
 header address p { margin: 0 0 0.25em; }
 header span, header img { display: block; float: right; }
 header span { margin: 0 0 1em 1em; max-height: 25%; max-width: 60%; position: relative; }
-header img { max-height: 100%; max-width: 100%; }
+header img { max-height: 50%; max-width: 50%; }
 header input { cursor: pointer; -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"; height: 100%; left: 0; opacity: 0; position: absolute; top: 0; width: 100%; }
 
 /* article */
@@ -77,7 +77,8 @@ aside h1 { border-color: #999; border-bottom-style: solid; }
 
 
 p {
-	color: black !important;
+	color: #373b46 !important;
+    font-weight: 800;
 }
 
 tr:hover .cut { opacity: 1; }
@@ -89,4 +90,12 @@ tr:hover .cut { opacity: 1; }
 	.add, .cut { display: none; }
 }
 
-@page { margin: 0; }
+// @page { margin: 0; }
+.yellow-cat {
+	background: #f6d003;
+	color: #2f3942;
+}
+.black-cat {
+	background: #373b46;
+	color: #feffff;
+}
